--- a/FinalProject/client/react-demo/src/styles/globals.css
+++ b/FinalProject/client/react-demo/src/styles/globals.css
@@ -3,3 +3,24 @@
 @tailwind utilities;
 
 
+.alert {
+    padding: 15px;
+    margin: 10px 0;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    font-size: 16px;
+}
+
+/* Success alert styling */
+.alert.success {
+    color: #155724;
+    background-color: #d4edda;
+    border-color: #c3e6cb;
+}
+
+/* Error alert styling */
+.alert.error {
+    color: #721c24;
+    background-color: #f8d7da;
+    border-color: #f5c6cb;
+}
